# luna

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.CN.md  README.md  WORKFLOW.md  justfile  package.json
.github/workflows/: asahi-desktop-release.yml  ci.yml
apps/asahi-desktop/: package.json
apps/asahi-desktop/scripts/: prepare-sidecar.mjs
apps/asahi-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/asahi-desktop/src-tauri/capabilities/: default.json
apps/asahi-desktop/src-tauri/icons/: icon.icns
apps/asahi-desktop/src-tauri/src/: main.rs
apps/asahi-desktop/ui/: index.html
apps/asahi-web/: AGENTS.md  DESIGN.md  components.json  index.html  knip.json  package.json  tsconfig.json  vite.config.ts
apps/asahi-web/src/: App.tsx  main.tsx  style.css
apps/asahi-web/src/api/: asahi.ts
apps/asahi-web/src/components/dashboard/: asahi-sidebar.tsx  constants.ts  create-issue-trigger.tsx  dashboard-skeleton.tsx  editable-fields.tsx  issue-badges.tsx  issue-comment-form.tsx  issue-composer.tsx  issue-details.tsx  issue-list.tsx  page-layout.tsx  (+5 more)
apps/asahi-web/src/lib/: query-refresh.ts  sanitize.ts
crates/asahi/: AGENTS.md  Cargo.toml  build.rs
crates/asahi-migration/: AGENTS.md  Cargo.toml
crates/asahi-migration/src/: lib.rs  m20260430_000001_create_asahi_schema.rs  m20260430_000002_create_projects.rs  m20260501_000003_backfill_projects.rs  m20260501_000004_create_project_wiki.rs
crates/asahi/src/: app.rs  db.rs  lib.rs  main.rs  web.rs
crates/asahi/src/api/: error.rs  health.rs  issues.rs  mod.rs  notifications.rs  projects.rs  wiki.rs
crates/asahi/src/domain/: activity.rs  comment.rs  issue.rs  mod.rs  notification.rs  project.rs  wiki.rs
crates/asahi/src/entity/: activity.rs  comment.rs  issue.rs  issue_label.rs  issue_relation.rs  mod.rs  notification.rs  project.rs  wiki_audit.rs  wiki_node.rs  wiki_page_version.rs
crates/asahi/src/migration/: m20260430_000001_create_asahi_schema.rs  m20260501_000003_backfill_projects.rs  m20260501_000005_remove_synthetic_default_project.rs  mod.rs
crates/asahi/src/service/: mod.rs
crates/asahi/src/store/: mod.rs
crates/luna/: AGENTS.md  Cargo.toml
crates/luna/src/: agent.rs  config.rs  error.rs  init.rs  job.rs  lib.rs  main.rs  model.rs  orchestrator.rs  prompt.rs  shell_command.rs  test_support.rs  workflow.rs  workspace.rs
crates/luna/src/agent/: acp.rs  angel_runtime.rs  codex.rs  command_line.rs  mod.rs
crates/luna/src/tracker/: asahi.rs  commands.rs  context.rs  github_project.rs  linear.rs  mod.rs
crates/luna/src/wiki/: command.rs  fs.rs  mod.rs  shell.rs
src/: agent.rs  config.rs  init.rs  lib.rs  main.rs  orchestrator.rs  paths.rs  prompt.rs  tracker.rs  workflow.rs  workspace.rs
web/: package.json
web/src/: style.css
(+10 files in other folders)
