[package]
name = "luna"
version = "0.1.0"
edition = "2024"

[dependencies]
asahi = { path = "../asahi" }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }
clash-brush-parser = "0.7.1"
dirs = "6.0.0"
dotenvy = "0.15.7"
garde = { version = "0.22.1", features = ["derive"] }
minijinja = "2.12.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"
bashkit = "0.5"
html2md = "0.2.15"

[dev-dependencies]
tempfile = "3.20.0"
